add mape for test set

--- a/ts1_sklearn_models.ipynb
+++ b/ts1_sklearn_models.ipynb
@@ -1380,6 +1380,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MAPE for test set: 0.824815046658205\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'MAPE for test set: {mape(actual_vs_pred_df[\"target\"], actual_vs_pred_df[\"predicted\"])}')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
